--- a/style.css
+++ b/style.css
@@ -59,11 +59,36 @@ nav a {
     /**/
     font-size: 1.2rem;
 }
+
 /*efeito adicionado quando o ouise paar sbre o links dentro da tag nav*/
-nav a:hover{
+nav a:hover {
     /*adiciona um underline*/
-text-decoration: underline;
-/*diminui o tamanho da fonte*/
-transform: scale(0.90);
+    text-decoration: underline;
+    /*diminui o tamanho da fonte*/
+    transform: scale(0.90);
+    /*adiciona um tmpo na tranição do tamanho da fonte*/
+    transition: transform 0.1s;
+
 }
+
+footer {
+    display: flex;
+    /**/
+    align-items: center;
+    /**/
+    justify-content: center;
+    /**/
+    background-color: var(--primary-color);
+    /**/
+    color: var(--bg-color);
+    /**/
+    width: 100%;
+    /**/
+    height: 3rem;
+    /**/
+    margin: top 2rem;
+    
+
+}
+
 /*Tempo 6:30*/
