--- a/style.css
+++ b/style.css
@@ -70,39 +70,62 @@ nav a:hover {
     transition: transform 0.1s;
 
 }
-.graficos-container{
+
+.graficos-container {
+    /**/
     margin: 5rem;
 
+
 }
 
-.graficos-container__texto{
+.graficos-container__texto {
+    /**/
     font-size: 1.3rem;
+
+    /**/
     text-align: center;
+
+    /**/
     padding: 2rem;
+
+    /**/
     border: var(--secondary-color) solid 2px;
+
 }
-span{
+
+span {
 
     font-weight: bold;
+    /**/
     color: var(--secondary-color);
+    /**/
 }
+
 footer {
+    /**/
     display: flex;
+
     /**/
     align-items: center;
+
     /**/
     justify-content: center;
+
     /**/
     background-color: var(--primary-color);
+
     /**/
     color: var(--bg-color);
+
     /**/
     width: 100%;
+
     /**/
     height: 3rem;
+
     /**/
     margin-top: 2rem;
-    
+
 
 }
 
