--- a/style.css
+++ b/style.css
@@ -67,7 +67,10 @@ nav a:hover {
     /**/
     margin: 5rem;
 }
-
+.graficos{
+    margin-top: 3rem;
+    
+}
 .graficos-container__texto {
     /*tamanhoda fonte*/
     font-size: 1.3rem;
